--- a/main.css
+++ b/main.css
@@ -3,31 +3,38 @@
     outline-offset:10px;
     background:lightyellow;
     border:1px solid mediumvioletred;
-    margin:20px;
     text-align:center;
     color:mediumvioletred;
-    padding:20px;
     z-index:1;
+    max-width: 50vw;
+    margin: 18px auto 0px auto;
+    padding:20px;
+    position:relative;
 }
 .main--heading {
     color:hotpink;
+    position:relative;
+    right:-20%;
+    max-width:80%;
+    border:1px solid palegoldenrod;
 }
-.main__uList {
+.main--uList {
     font-weight: bold;
     z-index:3;
 }
-.main__uList-background {
-    position:relative;
-    top:-150px;
-    left:15px;
+.main--uList-background {
+    position:absolute;
+    bottom:20px;
+    left:45%;
     z-index:2;
 }
-.main__uList-background img {
+.main--uList-background img {
     width: 100px;
     height:auto;
     opacity:0.3;
 }
 .main p {
     /* position:absolute; */
-    /* Yes I see what that does but we're not doing that. */
+    /* Yes I see what that does but we're not doing that. Go look at the cupcake.*/
+    max-width:80%;
 }
