--- a/fancy.css
+++ b/fancy.css
@@ -13,6 +13,8 @@ body {
     background-color:rgb(240, 248, 255, 0.05);
     padding: 50px;
     margin:50px auto;
+    width: -webkit-max-content;
+    width: -moz-max-content;
     width: max-content;
     text-align: center;
 }
@@ -65,6 +67,8 @@ body {
     height: 14px;
     border-radius: 50%;
     background-color:skyblue;
+    -webkit-transition: background-color 0.3s;
+    -o-transition: background-color 0.3s;
     transition: background-color 0.3s;
 }
 .form--radioContainer input[type="radio"]:checked + label .form--radio::after {
@@ -88,11 +92,71 @@ body {
 /* Okay it's not like I'm not going to put in the effort for a fancy fuckin' button */
 
 .form--button-excited:hover {
-    animation: rainbow 1s linear;
-    animation-iteration-count: infinite;
+    -webkit-animation: rainbow 1s linear;
+            animation: rainbow 1s linear;
+    -webkit-animation-iteration-count: infinite;
+            animation-iteration-count: infinite;
     color:aliceblue;
     border:none;
     padding:2px 10px;
+}
+
+@-webkit-keyframes rainbow{
+    0%{
+        background-color: red;
+        translate: 1px, 1px;
+        rotate: 0deg;
+    }
+    10%{
+        background-color: orange;
+        translate: -1px, -2px;
+        rotate: -1deg;
+    }
+    20%{
+        background-color: yellow;
+        translate: -3px, 0px;
+        rotate: 1deg;
+    }
+    30%{
+        background-color: yellowgreen;
+        translate: 3px, 2px;
+        rotate: 0deg;
+    }
+    40%{
+        background-color: green;
+        translate: 1px, -1px;
+        rotate: 1deg;
+    }
+    50%{
+        background-color: aquamarine;
+        translate: 1px, 2px;
+        rotate: -1deg;
+    }
+    60%{
+        background-color: blue;
+        translate: -3px, 1px;
+        rotate: 0deg;
+    }
+    70%{
+        background-color: indigo;
+        translate: 3px, 1px;
+        rotate: -1deg;
+    }
+    80%{
+        background-color: purple;
+        translate: -1px, -1px;
+        rotate: 1deg;
+    }
+    90%{
+        background-color: violet;
+        translate: 1px, 2px;
+        rotate: 0deg;
+    }
+    100%{
+        background-color: pink;
+        translate: 1px, -2px;
+        rotate: -1deg;
+    }
 }
 
 @keyframes rainbow{
